--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,6 +13,8 @@
     "antd": "^4.19.2",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "express": "^4.17.3",
+    "http-proxy-middleware": "^2.0.4",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
